style.css
/* import google fornts */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');


*{
margin: 0 auto;
padding: 0;
box-sizing: border-box;
font-family: "Poppins", serif;
color:white ;
font-weight: 600;
}

body{
    background: url('assets/bg.jpg');
    width: 100%;
    height: 100dvh;
    background-size: cover;
    background-position: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

body::before{
    content: "";
    position: absolute;
    width: 100%;
    height: 100dvh;
    background: rgb(0, 0, 0, 0.15);
    backdrop-filter: blur(15px);
}

/* UTILITIES */
.regular-txt{
    font-weight: 400;
}
/* END UTILITIES */

.main-container{
    width: 300px;
    height: 496px;
    z-index: 1;
    background: linear-gradient(
        to top, rgb(0, 0, 0, 0.15),
        rgb(255,255,255,0.15));
    border-radius: 12px;
    backdrop-filter: blur(100px);
    padding: 20px;
}

/* INPUT CONTAINER */

.input-container{
    position: relative;
    margin-bottom: 25px;
}

.city-input{
    width: 100%;
    padding: 10px 16px;
    border-radius: 99px;
    border: 3px solid transparent;
    background: rgb(0, 0, 0,  0.15);
    outline: none;
    font-weight: 500;
    transition: 0.25s border;
    padding-right: 45px;
}

.city-input:focus{
    border: 3px solid rgb(0,0,0,0.15);
}
.city-input::placeholder{
    color: rgb(255, 255, 255,0.75);
}

.search-btn{
 position: absolute;
 right: 10px;
 top: 50%;
 transform: translateY(-50%);
 background: none;
 display: flex;
 border: none;
 cursor: pointer;
}

/*  END INPUT COTAINER */

/* SECTION: WHEATER INFO */
.weather-info{
    display: flex;
    flex-direction: column;
    gap: 25px;
}

.location-date-container{
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.location{
    display: flex;
    align-items: center;
    gap: 6px;
}

.weather-summary-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.weather-summary-img{
    width: 120px;
    height: 120px;
}

.weather-summary-info{
    text-align: end;
}

.weather-conditions-container{
    display: flex;
    justify-content: space-between;
}

.condition-item{
    display: flex;
    align-items: center;
    gap: 6px;
}

.condition-item span{
    font-size: 30px;
}

.forecast-item-container{
    display: flex;
    gap: 15px;
    overflow-x: scroll;
    padding-bottom: 12px;
    flex-wrap: nowrap
}

.forecast-item-container::-webkit-scrollbar{
    height: 8px;
}

.forecast-item-container::-webkit-scrollbar-track{
    background: rgb(0,0,0,0.1);
    border-radius: 99px;
}
.forecast-item-container::-webkit-scrollbar-thumb{
        background: rgb(0, 0, 0, 0.15);
        border-radius: 99px;
}
.forecast-item{
    min-width: 70px;
    background: rgb(255,255,255,0.1);
    display: flex;
    flex-direction: column;
    gap: 6px;
    padding: 10px;
    align-items: center;
    border-radius: 12px;
    transition: 0.3s background;
}
.forecast-item:hover{
background: rgb(255,255,255,0.15);
}
.forecast-item-img{
    width: 35px;
    height: 35px;
}
/*  END SECTION: WHEATER INFO */

/* SECTION: MESSAGE */
.section-message{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 15px;
    margin-top: 25%;;

}
.section-message img{
    height: 180px;
    width: fit-content;
}
/* END SECTION: MESSAGE */

